# irrlicht

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  build.sh  changes.txt  irr-readme.txt  readme.txt  replace_non_leading_tabs.lua  repro.sh  run.sh
examples/: BuildAllExamples.workspace  BuildAllExamples_v8.sln  BuildAllExamples_v9.sln  BuildAllExamples_vc10.sln  BuildAllExamples_vc11.sln  BuildAllExamples_vc12.sln  BuildAllExamples_vc14.sln  BuildAllExamples_vc16.sln  BuildAllExamples_vc17.sln  CMakeLists.txt
examples/01.HelloWorld/: HelloWorld.dev  HelloWorld_vc16.vcxproj  HelloWorld_vc17.vcxproj  HelloWorld_vc8.vcproj  HelloWorld_vc9.vcproj  Makefile  tutorial.html
examples/02.Quake3Map/: Makefile  Quake3Map.dev  Quake3Map_vc16.vcxproj  Quake3Map_vc17.vcxproj  Quake3Map_vc8.vcproj  Quake3Map_vc9.vcproj  main.cpp  tutorial.html
examples/03.CustomSceneNode/: CustomSceneNode.dev  CustomSceneNode_vc16.vcxproj  CustomSceneNode_vc17.vcxproj  CustomSceneNode_vc8.vcproj  CustomSceneNode_vc9.vcproj  Makefile  main.cpp  tutorial.html
examples/04.Movement/: Makefile  Movement.dev  Movement_vc16.vcxproj  Movement_vc17.vcxproj  Movement_vc8.vcproj  Movement_vc9.vcproj  main.cpp  tutorial.html
examples/05.UserInterface/: Makefile  UserInterface.dev  UserInterface_vc16.vcxproj  UserInterface_vc17.vcxproj  UserInterface_vc8.vcproj  UserInterface_vc9.vcproj  main.cpp  tutorial.html
examples/06.2DGraphics/: 2DGraphics.dev  2DGraphics_vc16.vcxproj  2DGraphics_vc17.vcxproj  2DGraphics_vc8.vcproj  2DGraphics_vc9.vcproj  Makefile  main.cpp  tutorial.html
examples/07.Collision/: Collision.dev  Collision_vc16.vcxproj  Collision_vc17.vcxproj  Collision_vc8.vcproj  Collision_vc9.vcproj  Makefile  main.cpp  tutorial.html
examples/08.SpecialFX/: Makefile  SpecialFX.dev  SpecialFX_vc16.vcxproj  SpecialFX_vc17.vcxproj  SpecialFX_vc8.vcproj  SpecialFX_vc9.vcproj  main.cpp  tutorial.html
examples/09.Meshviewer/: Makefile  MeshViewer.dev  Meshviewer_vc16.vcxproj  Meshviewer_vc17.vcxproj  Meshviewer_vc8.vcproj  Meshviewer_vc9.vcproj  main.cpp  tutorial.html
examples/10.Shaders/: Makefile  Shaders.dev  Shaders_vc16.vcxproj  Shaders_vc17.vcxproj  Shaders_vc8.vcproj  Shaders_vc9.vcproj  main.cpp  tutorial.html
examples/11.PerPixelLighting/: Makefile  PerPixelLighting.dev  PerPixelLighting_vc16.vcxproj  PerPixelLighting_vc17.vcxproj  PerPixelLighting_vc8.vcproj  PerPixelLighting_vc9.vcproj  main.cpp  tutorial.html
examples/12.TerrainRendering/: Makefile  TerrainRendering.dev  TerrainRendering_vc16.vcxproj  TerrainRendering_vc17.vcxproj  TerrainRendering_vc8.vcproj  TerrainRendering_vc9.vcproj  main.cpp  tutorial.html
examples/13.RenderToTexture/: Makefile  RenderToTexture.dev  RenderToTexture_vc16.vcxproj  RenderToTexture_vc17.vcxproj  RenderToTexture_vc8.vcproj  RenderToTexture_vc9.vcproj  main.cpp  tutorial.html
examples/14.Win32Window/: Makefile  Win32Window.dev  Win32Window_vc16.vcxproj  Win32Window_vc17.vcxproj  Win32Window_vc8.vcproj  Win32Window_vc9.vcproj  main.cpp  tutorial.html
examples/15.LoadIrrFile/: LoadIrrFile.dev  LoadIrrFile_vc16.vcxproj  LoadIrrFile_vc17.vcxproj  LoadIrrFile_vc8.vcproj  LoadIrrFile_vc9.vcproj  Makefile  main.cpp  tutorial.html
examples/16.Quake3MapShader/: Makefile  Quake3MapShader.dev  Quake3MapShader_vc16.vcxproj  Quake3MapShader_vc17.vcxproj  Quake3MapShader_vc8.vcproj  Quake3MapShader_vc9.vcproj  main.cpp  tutorial.html
examples/17.HelloWorld_Mobile/: Makefile  main.cpp  tutorial.html
examples/18.SplitScreen/: Makefile  SplitScreen.dev  SplitScreen_vc16.vcxproj  SplitScreen_vc17.vcxproj  SplitScreen_vc8.vcproj  SplitScreen_vc9.vcproj  main.cpp  tutorial.html
examples/19.MouseAndJoystick/: Makefile  MouseAndJoystick.dev  MouseAndJoystick_vc16.vcxproj  MouseAndJoystick_vc17.vcxproj  MouseAndJoystick_vc8.vcproj  MouseAndJoystick_vc9.vcproj  main.cpp  tutorial.html
examples/20.ManagedLights/: Makefile  ManagedLights.dev  ManagedLights_vc16.vcxproj  ManagedLights_vc17.vcxproj  ManagedLights_vc8.vcproj  ManagedLights_vc9.vcproj  main.cpp  tutorial.html
examples/21.Quake3Explorer/: Makefile  Quake3Explorer.dev  Quake3Explorer_vc11.vcxproj  Quake3Explorer_vc12.vcxproj  Quake3Explorer_vc16.vcxproj  Quake3Explorer_vc17.vcxproj  Quake3Explorer_vc8.vcproj  Quake3Explorer_vc9.vcproj  main.cpp  q3factory.cpp  q3factory.h  tutorial.html
examples/22.MaterialViewer/: Makefile  MaterialViewer.dev  MaterialViewer_vc16.vcxproj  MaterialViewer_vc17.vcxproj  MaterialViewer_vc8.vcproj  MaterialViewer_vc9.vcproj  main.cpp  main.h  tutorial.html
examples/23.SMeshHandling/: Makefile  SMeshHandling.dev  SMeshHandling_vc16.vcxproj  SMeshHandling_vc17.vcxproj  SMeshHandling_vc8.vcproj  SMeshHandling_vc9.vcproj  main.cpp  tutorial.html
examples/24.CursorControl/: CursorControl_vc16.vcxproj  CursorControl_vc17.vcxproj  CursorControl_vc8.vcproj  CursorControl_vc9.vcproj  Makefile  main.cpp  tutorial.html
examples/25.XmlHandling/: Makefile  XmlHandling_vc16.vcxproj  XmlHandling_vc17.vcxproj  XmlHandling_vc8.vcproj  XmlHandling_vc9.vcproj  main.cpp  tutorial.html
examples/26.OcclusionQuery/: Makefile  OcclusionQuery.dev  OcclusionQuery_vc16.vcxproj  OcclusionQuery_vc17.vcxproj  OcclusionQuery_vc8.vcproj  OcclusionQuery_vc9.vcproj  main.cpp  tutorial.html
examples/28.CubeMapping/: Makefile  (+9 more)
tests/: CMakeLists.txt  Makefile  archiveReader.cpp  color.cpp  coreutil.cpp  createImage.cpp  cursorSetVisible.cpp  disambiguateTextures.cpp  draw2DImage.cpp  drawRectOutline.cpp  drawVertexPrimitive.cpp  enumerateImageManipulators.cpp  exports.cpp  fast_atof.cpp  filesystem.cpp  flyCircleAnimator.cpp  irrArray.cpp  irrCoreEquals.cpp  irrList.cpp  irrMap.cpp  irrString.cpp  loadTextures.cpp  main.cpp  makeColorKeyTexture.cpp  material.cpp  matrixOps.cpp  meshLoaders.cpp  mrt.cpp  orthoCam.cpp  projectionMatrix.cpp  renderTargetTexture.cpp  sceneCollisionManager.cpp  screenshot.cpp  serializeAttributes.cpp  stencilshadow.cpp  testDimension2d.cpp  testGeometryCreator.cpp  testLine2d.cpp  testQuaternion.cpp  testS3DVertex.cpp  (+14 more)
(+3096 files in other folders)
